rabbitcode remarks