@@ -10,7 +10,6 @@ import com.farao_community.farao.gridcapa_core_valid.api.exception.CoreValidInva
 import com.farao_community.farao.gridcapa_core_valid.app.services.UrlValidationService;
 import com.farao_community.farao.gridcapa_core_valid.app.study_point.StudyPoint;
 import com.powsybl.iidm.network.TwoSides;
-import com.powsybl.openrao.commons.Unit;
 import com.powsybl.openrao.data.crac.api.Instant;
 import com.powsybl.openrao.data.crac.api.RemedialAction;
 import com.powsybl.openrao.data.crac.api.State;
@@ -29,11 +28,13 @@ import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collector;
-import java.util.stream.Collectors;
+
+import static com.powsybl.openrao.commons.Unit.MEGAWATT;
+import static java.util.stream.Collectors.collectingAndThen;
+import static java.util.stream.Collectors.toList;
 
 /**
  * @author Theo Pascoli {@literal <theo.pascoli at rte-france.com>}
@@ -62,12 +63,11 @@ public class LimitingBranchResultService {
                     .filter(BranchCnecCreationContext::isImported)
                     .forEach(context -> {
                         final String criticalBranchId = context.getNativeObjectId();
-                        final Map<String, String> flowCnecsIds = context.getCreatedCnecsIds();
-                        flowCnecsIds.forEach((instant, flowCnecId) -> {
-                            final FlowCnec cnec = cracCreationContext.getCrac().getFlowCnec(flowCnecId);
-                            final LimitingBranchResult branchResult = createLimitingBranchResult(vertexId, criticalBranchId, raoResult, cnec);
-                            listLimitingBranches.add(branchResult);
-                        });
+                        context.getCreatedCnecsIds().values()
+                                .stream()
+                                .map(id -> cracCreationContext.getCrac().getFlowCnec(id))
+                                .map(cnec -> createLimitingBranchResult(vertexId, criticalBranchId, raoResult, cnec))
+                                .forEach(listLimitingBranches::add);
 
                     });
             return listLimitingBranches;
@@ -76,18 +76,19 @@ public class LimitingBranchResultService {
         }
     }
 
-    private LimitingBranchResult createLimitingBranchResult(String studyPointId,
-                                                            String criticalBranchId,
-                                                            RaoResult raoResult,
-                                                            FlowCnec cnec) {
-        Double ramBefore = raoResult.getMargin(null, cnec, Unit.MEGAWATT);
-        Double ramAfter = raoResult.getMargin(cnec.getState().getInstant(), cnec, Unit.MEGAWATT);
-        TwoSides cnecSide = cnec.getMonitoredSides().stream().collect(toOne());
-        Double flowBefore = getFlow(raoResult, null, cnec, cnecSide);
-        Double flowAfter = getFlow(raoResult, cnec.getState().getInstant(), cnec, cnecSide);
-        Set<RemedialAction<?>> remedialActions = getRemedialActions(raoResult, cnec);
-        String criticalBranchName = cnec.getName();
-        State state = cnec.getState();
+    private LimitingBranchResult createLimitingBranchResult(final String studyPointId,
+                                                            final String criticalBranchId,
+                                                            final RaoResult raoResult,
+                                                            final FlowCnec cnec) {
+        final Double ramBefore = raoResult.getMargin(null, cnec, MEGAWATT);
+        final Double ramAfter = raoResult.getMargin(cnec.getState().getInstant(), cnec, MEGAWATT);
+        final TwoSides cnecSide = cnec.getMonitoredSides().stream().collect(toOne());
+        final Double flowBefore = getFlow(raoResult, null, cnec, cnecSide);
+        final Double flowAfter = getFlow(raoResult, cnec.getState().getInstant(), cnec, cnecSide);
+        final Set<RemedialAction<?>> remedialActions = getRemedialActions(raoResult, cnec);
+        final String criticalBranchName = cnec.getName();
+        final State state = cnec.getState();
+
         return new LimitingBranchResult(
                 studyPointId,
                 criticalBranchId,
@@ -101,14 +102,14 @@ public class LimitingBranchResultService {
         );
     }
 
-    private static double getFlow(RaoResult raoResult,
-                                  Instant optimizedInstant,
-                                  FlowCnec cnec,
-                                  TwoSides cnecSide) {
-        Optional<Double> upperBound = cnec.getUpperBound(cnecSide, Unit.MEGAWATT);
-        Optional<Double> lowerBound = cnec.getLowerBound(cnecSide, Unit.MEGAWATT);
+    private static double getFlow(final RaoResult raoResult,
+                                  final Instant optimizedInstant,
+                                  final FlowCnec cnec,
+                                  final TwoSides cnecSide) {
+        final Optional<Double> upperBound = cnec.getUpperBound(cnecSide, MEGAWATT);
+        final Optional<Double> lowerBound = cnec.getLowerBound(cnecSide, MEGAWATT);
 
-        double flow = raoResult.getFlow(optimizedInstant, cnec, cnecSide, Unit.MEGAWATT);
+        double flow = raoResult.getFlow(optimizedInstant, cnec, cnecSide, MEGAWATT);
         if (upperBound.isEmpty() && lowerBound.isPresent()) {
             flow = -flow;
         } else if (upperBound.isPresent() && lowerBound.isPresent()) {
@@ -118,11 +119,11 @@ public class LimitingBranchResultService {
         return flow;
     }
 
-    private Set<RemedialAction<?>> getRemedialActions(RaoResult raoResult,
-                                                      Cnec<?> cnec) {
-        Set<NetworkAction> networkActions = raoResult.getActivatedNetworkActionsDuringState(cnec.getState());
-        Set<RangeAction<?>> rangeActions = raoResult.getActivatedRangeActionsDuringState(cnec.getState());
-        Set<RemedialAction<?>> remedialActionsActivated = new HashSet<>();
+    private Set<RemedialAction<?>> getRemedialActions(final RaoResult raoResult,
+                                                      final Cnec<?> cnec) {
+        final Set<NetworkAction> networkActions = raoResult.getActivatedNetworkActionsDuringState(cnec.getState());
+        final Set<RangeAction<?>> rangeActions = raoResult.getActivatedRangeActionsDuringState(cnec.getState());
+        final Set<RemedialAction<?>> remedialActionsActivated = new HashSet<>();
         remedialActionsActivated.addAll(networkActions);
         remedialActionsActivated.addAll(rangeActions);
         return remedialActionsActivated;
@@ -136,9 +137,9 @@ public class LimitingBranchResultService {
      * It would throw an exception if there isn't exactly one element (zero or more) in the stream.
      */
     private static <T> Collector<T, ?, T> toOne() {
-        return Collectors.collectingAndThen(Collectors.toList(), list -> {
+        return collectingAndThen(toList(), list -> {
             if (list.size() == 1) {
-                return list.get(0);
+                return list.getFirst();
             }
             throw new CoreValidInvalidDataException("Found " + list.size() + " element(s), expected exactly one.");
         });
